--- a/project/index.html
+++ b/project/index.html
@@ -7,28 +7,31 @@
 </head>
 
 <body>
-    <header>
-        This is the header!
-    </header>
+
     <nav>
-        <nav>
+        <ul>
+            <li><img src="images/images.png"></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Notifications</a></li>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Notifications</a></li>
-                <ul>
-                    <li>Notification 1</li>
-                    <li>Notification 2</li>
-                    <li>Notification 3</li>
-                    <li>Notification 4</li>
-                    <li>Notification 5</li>
-                </ul>
-                <li><a href="#">My Account</a></li>
-                <li><a href="#">Log Out</a></li>
+                <li>Notification 1</li>
+                <li>Notification 2</li>
+                <li>Notification 3</li>
+                <li>Notification 4</li>
+                <li>Notification 5</li>
             </ul>
-        </nav>
+            <li><a href="#">My Account</a></li>
+            <li><a href="#">Log Out</a></li>
+        </ul>
     </nav>
     <main>
-        This is main!
+        <div><img src="images/picture145716079994.jpg">
+            <p>kid name1</p>
+        </div>
+        <div><img src="images/picture145716079994.jpg"> kid name2</div>
+        <div><img src="images/clipart2755860.png"> kid name3</div>
+        <div><img src="images/picture145716079994.jpg"> kid name4</div>
+        <div><img src="images/clipart2755860.png"> kid name5</div>
     </main>
     <footer>
         this is the footer!
