--- a/project/index.html
+++ b/project/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><img src="images/images.png"></li>
+            <li id="KIMO">KIMO APP</li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Notifications</a></li>
             <ul>
@@ -25,16 +26,45 @@
         </ul>
     </nav>
     <main>
-        <div><img src="images/picture145716079994.jpg">
-            <p>kid name1</p>
-        </div>
-        <div><img src="images/picture145716079994.jpg"> kid name2</div>
-        <div><img src="images/clipart2755860.png"> kid name3</div>
-        <div><img src="images/picture145716079994.jpg"> kid name4</div>
-        <div><img src="images/clipart2755860.png"> kid name5</div>
+        <a href="">
+            <div><img src="images/picture145716079994.jpg"> kid name1 </div>
+        </a>
+        <a href="">
+            <div><img src="images/picture145716079994.jpg"> kid name2</div>
+        </a>
+        <a href="">
+            <div><img src="images/clipart2755860.png"> kid name3</div>
+        </a>
+        <a href="">
+            <div><img src="images/picture145716079994.jpg"> kid name4</div>
+        </a>
+        <a href="">
+            <div><img src="images/clipart2755860.png"> kid name5</div>
+        </a>
+        <a href="">
+            <div id="add"><img src="images/add.png"></div>
+        </a>
     </main>
     <footer>
-        this is the footer!
+        <div id="facebook">
+            <img
+                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
+                href="https://www.facebook.com/stefania.andries">stefania.andries</a>
+            <img
+                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
+                href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+            <img
+                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
+                href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
+        </div>
+
+        <div id="email">
+            <img src="images/windows8mailapp.jpg"><a href="https://www..com/stefania.andries">stefania.andries</a>
+            <img src="images/windows8mailapp.jpg">
+            <a href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+            <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
+
+        </div>
     </footer>
 </body>
 
