--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="images/images.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Kimo</title>
 </head>
