--- a/project/index.html
+++ b/project/index.html
@@ -27,6 +27,29 @@
             <li><a href="#">My Account</a></li>
             <li><a href="#">Log Out</a></li>
         </ul>
+        <nav>
+            <ul>
+                <li id="menu">
+                    <img src="images/menu-icon.png">
+                    <ul id="menu2">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Notifications</a></li>
+                        <ul>
+                            <li>Notification 1</li>
+                            <li>Notification 2</li>
+                            <li>Notification 3</li>
+                            <li>Notification 4</li>
+                            <li>Notification 5</li>
+                        </ul>
+                        <li><a href="#">My Account</a></li>
+                        <li><a href="#">Log Out</a></li>
+                    </ul>
+                </li>
+                <li><img src="images/images.png"></li>
+                <li id="KIMO">KIMO APP</li>
+            </ul>
+
+        </nav>
     </nav>
     <main>
         <a href="">
@@ -44,8 +67,25 @@
         <a href="">
             <div><img src="images/clipart2755860.png"> kid name5</div>
         </a>
-        <a href="">
+        <a href="index.html">
             <div id="add"><img src="images/add.png"></div>
+            <div id="add1">
+                <form>
+                    <label for="image">Image:</label>
+                    <input type="file" name="image" id="image" /><br />
+                    <input type="submit" name="submit" value="Submit" />
+                </form>
+                <form>
+                    Prenume Copil<br>
+                    <input type="text" name="firstname">
+                    <br>Nume Copil
+                    <br><input type="text" name="lastname">
+                    <br>Cod Senzor
+                    <br><input type="text" name="cod">
+                    <br><input type="submit" name="submit" value="Submit" />
+
+                </form>
+            </div>
         </a>
     </main>
     <footer>
