--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -45,11 +45,14 @@
             <div><img id="Kidimage" src="images/clipart2755860.png"> kid name5</div>
         </a>
         <a href="">
-            <div id="add"><img id="Kidimage" src="images/add.png">Add new kid</div>
+            <div id="add"><img id="Kidimage" src="images/add.png">Add kid</div>
         </a>
         </div>
         <div class="actions">
-O sa pun ceva si aici
+                    <div id="datas"><img src="images/descărcare (1).png"> FirstName LastName<div>
+                    <div id="datas"><img src="images/descărcare (2).png"> Adress</div>
+                    <div id="datas"><img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg"> Phone Number</div>
+                    <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"> E-mail Adress/div>
         </div>
     </main>
     <footer>
