--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -49,10 +49,13 @@
         </a>
         </div>
         <div class="actions">
-                    <div id="datas"><img src="images/descărcare (1).png"> FirstName LastName<div>
+                    <div id="datas"><img src="images/descărcare (1).png"> FirstName LastName</div>
                     <div id="datas"><img src="images/descărcare (2).png"> Adress</div>
                     <div id="datas"><img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg"> Phone Number</div>
-                    <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"> E-mail Adress/div>
+                    <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"> E-mail Adress</div>
+                    <br>
+                    <br>
+                    <div id="datas"><img src="images/pen.png"> Change personal data</div>
         </div>
     </main>
     <footer>
