--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -55,8 +55,8 @@
                     <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"> E-mail Adress</div>
                     <br>
                     <br>
-                    <div id="datas"><img src="images/pen.png"> Change personal data</div>
-        </div>
+                    <div id="datas"><a href="#modal" class="modal-trigger"><img src="images/pen.png"> Change personal data</a></div>
+                    
     </main>
     <footer>
         <div id="facebook">
@@ -78,4 +78,37 @@
 
         </div>
     </footer>
+    <div class="modal" id="modal">
+        <div class="modal__dialog">
+          <section class="modal__content">
+            <header class="modal__header">
+              <h2 class="modal__title">Change personal data</h2>
+              <a href="#" class="modal__close">Save</a>
+            </header>
+            <div class="modal__body">
+              <p class="modal__text">
+                <form>
+                    <img src="images/descărcare (1).png"><br>
+                    <input type="text" name="name" value="FirstName LastName">
+                    <br>
+                    <img src="images/descărcare (2).png">
+                    Latitude: 
+                    <input type="text" name="latitude" value="45.943161">
+                    <br> Longitude: 
+                    <input type="text" name="longitudine" value="24.966761">
+                    <br>
+                    <img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg"><br>
+                    <input type="text" name="phone" value="Phone Number">
+                    <br>
+                    <img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"><br>
+                    <input type="text" name="e-mail" value="E-mail Adress">
+                    <br>
+                
+                  </form> 
+              </div>
+            <footer class="modal__footer">
+            </footer>
+          </section>
+        </div>
+      </div>
     </body>
