--- a/project/senzor.html
+++ b/project/senzor.html
@@ -30,8 +30,8 @@
                 <div><br> Accident <input type="checkbox"></div>
                 <div><br> Collision with an object <input type="checkbox"></div>
                 <div><br> Meeting another person <input type="checkbox"></div>
-
             </div>
+            <br><input type="button" id="end" value="submit">
 
         </form>
     </main>
