--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -45,7 +45,7 @@
             <div><img id="Kidimage" src="images/clipart2755860.png"> kid name5</div>
         </a>
         <a href="">
-            <div id="add"><img id="Kidimage" src="images/add.png">Add kid</div>
+            <div id="add"><a href="#modal2" class="modal-trigger"><img id="Kidimage" src="images/add.png">Add kid</a></div>
         </a>
         </div>
         <div class="actions">
@@ -105,6 +105,47 @@
                     <br>
                 
                   </form> 
+              </div>
+            <footer class="modal__footer">
+            </footer>
+          </section>
+        </div>
+      </div>
+      <div class="modal2" id="modal2">
+        <div class="modal__dialog">
+          <section class="modal__content">
+            <header class="modal__header">
+              <h2 class="modal__title">Add kid</h2>
+              <a href="#" class="modal__close">Add</a>
+            </header>
+            <div class="modal__body">
+              <p class="modal__text">
+                <div id="form2">
+                    <div id="item">
+                    Kid's name:<br> 
+                    <input type="text" name="name" value="FirstName LastName">
+                    <br>
+                    </div>
+                    <div id="item">
+                    Sensor's code:<br>
+                    <input type="text" name="code" value="Code">
+                    <br> 
+                    </div>
+                    <div id="item">
+                        <br>
+                    Gender:<br> 
+                    <input type="checkbox" id="gender">
+                        <label for="girl">Girl</label>
+                    <input type="checkbox" id="gender">
+                        <label for="boy">Boy</label>
+                    </div>
+                    <div id="item">
+                    <br><br>
+                    Add a photo with your child: <br>
+                    <input type="file" name="photo" value="images/pen">
+                    <br>
+                    </div>
+                </div> 
               </div>
             <footer class="modal__footer">
             </footer>
