--- a/project/index.html
+++ b/project/index.html
@@ -102,9 +102,9 @@
         </div>
 
         <div id="email">
-            <img src="images/windows8mailapp.jpg"><a href="https://www..com/stefania.andries">stefania.andries</a>
+            <img src="images/windows8mailapp.jpg"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
             <img src="images/windows8mailapp.jpg">
-            <a href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+            <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
             <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
 
         </div>
