--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -72,7 +72,7 @@
         </div>
 
         <div id="email">
-            <img src="images/windows8mailapp.jpg"><a href="https://www..com/stefania.andries">stefania.andries</a>
+            <img src="images/windows8mailapp.jpg"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
             <img src="images/windows8mailapp.jpg"> <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
             <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
 
@@ -136,8 +136,8 @@
                     <div class="item">              
                     Gender:
                     <div id="gen">
-                    <input type="radio" id="gender" value="Girl">Girl
-                    <input type="radio" id="gender" value="Boy">Boy</div>
+                    <input type="radio" id="gender" value="Girl" name="kidgen">Girl
+                    <input type="radio" id="gender" value="Boy" name="kidgen">Boy</div>
                     </div>
                     <div id="addphoto">
                     Add a photo with your child: 
