--- a/project/index_login.html
+++ b/project/index_login.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div id = "Logo">
-            <img src="images/images.png">
+            <img src="images/images.png" alt="Logo">
             <h1 id="KIMO">KIMO APP</h1>
         </div>
         <div id = "Mesaj">
@@ -19,11 +19,11 @@
         <div id = "Login">
             <form>
                 <div class="loginBox">
-                    <img src="images/index.png">
+                    <img src="images/index.png" alt="user">
                     <input type="text" placeholder="Your username">
                 </div>
                 <div class="loginBox">
-                    <img src="images/parola.png">
+                    <img src="images/parola.png" alt="password">
                     <input type="password" placeholder="Your password">
                 </div>
                 <input type="button" id="butonLogin" value="Login">
