--- a/project/index_kid.html
+++ b/project/index_kid.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -54,9 +54,16 @@
   </nav>
   <main>
     <div class="act">
-      <a href="">
-        <div> People of interest </div>
-      </a>
+      <a href="#">
+        <div class="person"> People of interest </div></a>
+        <ul>
+          <li>Person 1</li>
+          <li>Person 2</li>
+          <li>Person 3</li>
+          <li>Person 4</li>
+          <li>Add new person</li>
+        </ul>
+      
       <a href="">
         <div>Interactions with other kids</div>
       </a>
@@ -68,7 +75,7 @@
     </div>
     <div class="profile">
       <div id="dataprofile"><img src="images/picture145716079994.jpg"><div id="name"> Kid 1</div> </div>
-  
+     <div class="map"><img src="images/Capture.jpg" ></div> 
   </main>
   <footer>
     <div id="facebook">
