--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -169,20 +169,18 @@
               </div>
               <div id="addphoto">
                 Add a photo with your child:
-                <input type="file" name="photo" value="images/pen">
+                <input type="file" name="photo" value="images/pen"><br>
               </div>
             </form>
 
         </div>
-<<<<<<< HEAD
       </div>
     </body>
 </html>
-=======
         <footer class="modal__footer">
         </footer>
       </section>
     </div>
   </div>
 </body>
->>>>>>> 05a9222e307913e039078ca7c8010646524c68d6
+
