left dropdown list

--- a/project/index_kid.html
+++ b/project/index_kid.html
@@ -5,9 +5,9 @@
   <link rel="shortcut icon" type="image/x-icon" href="images/images.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="styles/index_profile.css">
   <link rel="stylesheet" type="text/css" href="styles/style_kid.css">
-  <title>My  kid</title>
+  <link rel="stylesheet" type="text/css" href="styles/index_profile.css">
+  <title>My kid</title>
 </head>
 
 <body>
@@ -55,27 +55,38 @@
   <main>
     <div class="act">
       <a href="#">
-        <div class="person"> People of interest </div></a>
-        <ul>
-          <li>Person 1</li>
-          <li>Person 2</li>
-          <li>Person 3</li>
-          <li>Person 4</li>
-          <li>Add new person</li>
-        </ul>
-      
-      <a href="">
-        <div>Interactions with other kids</div>
+        <div class="person"> People of interest
+          <ul>
+            <li>Person 1</li>
+            <li>Person 2</li>
+            <li>Person 3</li>
+            <li>Person 4</li>
+            <li>Add new person</li>
+          </ul>
+        </div>
       </a>
-      <a  href="">
+      <a href="">
+        <div class="person">Interactions with other kids
+          <ul>
+            <li>kid 1</li>
+            <li>kid 2</li>
+            <li>kid 3</li>
+            <li>kid 4</li>
+            <li>Add new kid</li>
+          </ul>
+        </div>
+      </a>
+      <a href="">
         <a href="#modal2" class="modal-trigger">
           <div id="addph"><img id="Kidimage" src="images/add.png">Change the profile image </div>
         </a>
       </a>
     </div>
     <div class="profile">
-      <div id="dataprofile"><img src="images/picture145716079994.jpg"><div id="name"> Kid 1</div> </div>
-     <div class="map"><img src="images/Capture.jpg" ></div> 
+      <div id="dataprofile"><img src="images/picture145716079994.jpg">
+        <div id="name"> Kid 1</div>
+      </div>
+      <div class="map"><img src="images/Capture.jpg"></div>
   </main>
   <footer>
     <div id="facebook">
@@ -97,7 +108,7 @@
 
     </div>
   </footer>
- 
+
   <div class="modal2" id="modal2">
     <div class="modal__dialog">
       <section class="modal__content">
@@ -109,18 +120,19 @@
           <p class="modal__text">
             <form id="form2">
               <div id="text">
-              
-              <div id="addphoto">
-                Add a photo with your child:
-                <input type="file" name="photo" value="images/pen">
-              </div>
 
-          </form>
+                <div id="addphoto">
+                  Add a photo with your child:
+                  <input type="file" name="photo" value="images/pen">
+                </div>
+
+            </form>
         </div>
         <footer class="modal__footer">
         </footer>
       </section>
     </div>
   </div>
-    </body>
+</body>
+
 </html>
