--- a/project/index.html
+++ b/project/index.html
@@ -24,8 +24,8 @@
                 <li>Notification 4</li>
                 <li>Notification 5</li>
             </ul>
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="index_profile.html">My Account</a></li>
+            <li><a href="index_login.html">Log Out</a></li>
         </ul>
         <nav>
             <ul>
@@ -41,8 +41,8 @@
                             <li>Notification 4</li>
                             <li>Notification 5</li>
                         </ul>
-                        <li><a href="#">My Account</a></li>
-                        <li><a href="#">Log Out</a></li>
+                        <li><a href="index_profile.html">My Account</a></li>
+                        <li><a href="index_login.html">Log Out</a></li>
                     </ul>
                 </li>
                 <li><img src="images/images.png"></li>
@@ -52,19 +52,19 @@
         </nav>
     </nav>
     <main>
-        <a href="">
+        <a href="index_kid.html">
             <div><img src="images/picture145716079994.jpg"> kid name1 </div>
         </a>
-        <a href="">
+        <a href="index_kid.html">
             <div><img src="images/picture145716079994.jpg"> kid name2</div>
         </a>
-        <a href="">
+        <a href="index_kid.html">
             <div><img src="images/clipart2755860.png"> kid name3</div>
         </a>
-        <a href="">
+        <a href="index_kid.html">
             <div><img src="images/picture145716079994.jpg"> kid name4</div>
         </a>
-        <a href="">
+        <a href="index_kid.html">
             <div><img src="images/clipart2755860.png"> kid name5</div>
         </a>
         <a href="#modal2" class="modal-trigger">
@@ -94,43 +94,43 @@
     </footer>
     <div class="modal2" id="modal2">
         <div class="modal__dialog">
-          <section class="modal__content">
-            <header class="modal__header">
-              <h2 class="modal__title">Add kid</h2>
-              <a href="#" class="modal__close">Add</a>
-            </header>
-            <div class="modal__body">
-              <p class="modal__text">
-                <form id="form2">
-                    <div id="text">
-                    <div class="item">
-                    Kid's name:
-                    <input type="text" name="name" value="FirstName LastName">
-                    </div>
-                    <div class="item">
-                    Sensor's code:
-                    <input type="text" name="code" value="Code">
-           
-                    </div>
-                  </div>
+            <section class="modal__content">
+                <header class="modal__header">
+                    <h2 class="modal__title">Add kid</h2>
+                    <a href="#" class="modal__close">Add</a>
+                </header>
+                <div class="modal__body">
+                    <p class="modal__text">
+                        <form id="form2">
+                            <div id="text">
+                                <div class="item">
+                                    Kid's name:
+                                    <input type="text" name="name" value="FirstName LastName">
+                                </div>
+                                <div class="item">
+                                    Sensor's code:
+                                    <input type="text" name="code" value="Code">
 
-                    <div class="item">              
-                    Gender:
-                    <div id="gen">
-                    <input type="radio" id="gender" value="Girl" name="kidgen">Girl
-                    <input type="radio" id="gender" value="Boy" name="kidgen">Boy</div>
-                    </div>
-                    <div id="addphoto">
-                    Add a photo with your child: 
-                    <input type="file" name="photo" value="images/pen">
-                    </div>
-                  </form> 
-              </div>
-            <footer class="modal__footer">
-            </footer>
-          </section>
+                                </div>
+                            </div>
+
+                            <div class="item">
+                                Gender:
+                                <div id="gen">
+                                    <input type="radio" id="gender" value="Girl" name="kidgen">Girl
+                                    <input type="radio" id="gender" value="Boy" name="kidgen">Boy</div>
+                            </div>
+                            <div id="addphoto">
+                                Add a photo with your child:
+                                <input type="file" name="photo" value="images/pen">
+                            </div>
+                        </form>
+                </div>
+                <footer class="modal__footer">
+                </footer>
+            </section>
         </div>
-      </div>
+    </div>
 </body>
 
 </html>
