--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -15,7 +15,7 @@
     <ul>
       <li><img src="images/images.png"></li>
       <li id="KIMO">KIMO APP</li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Notifications</a></li>
       <ul>
         <li>Notification 1</li>
@@ -24,15 +24,15 @@
         <li>Notification 4</li>
         <li>Notification 5</li>
       </ul>
-      <li><a href="#">My Account</a></li>
-      <li><a href="#">Log Out</a></li>
+      <li><a href="">My Account</a></li>
+      <li><a href="index_login.html">Log Out</a></li>
     </ul>
     <nav>
       <ul>
         <li id="menu">
           <img src="images/menu-icon.png">
           <ul id="menu2">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Notifications</a></li>
             <ul>
               <li>Notification 1</li>
@@ -42,7 +42,7 @@
               <li>Notification 5</li>
             </ul>
             <li><a href="#">My Account</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="index_login.html">Log Out</a></li>
           </ul>
         </li>
         <li><img src="images/images.png"></li>
@@ -53,19 +53,19 @@
   </nav>
   <main>
     <div class="kids">
-      <a href="">
+      <a href="index_kid.html">
         <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name1 </div>
       </a>
-      <a href="">
+      <a href="index_kid.html">
         <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name2</div>
       </a>
-      <a href="">
+      <a href="index_kid.html">
         <div><img id="Kidimage" src="images/clipart2755860.png"> kid name3</div>
       </a>
-      <a href="">
+      <a href="index_kid.html">
         <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name4</div>
       </a>
-      <a href="">
+      <a href="index_kid.html">
         <div><img id="Kidimage" src="images/clipart2755860.png"> kid name5</div>
       </a>
       <a href="">
@@ -82,7 +82,7 @@
       <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg">
         E-mail Adress</div>
       <br>
-    
+
       <div id="datas"><a href="#modal" class="modal-trigger"><img src="images/pen.png"> Change personal data</a></div>
 
   </main>
@@ -174,13 +174,13 @@
             </form>
 
         </div>
-      </div>
-    </body>
-</html>
-        <footer class="modal__footer">
-        </footer>
-      </section>
     </div>
-  </div>
 </body>
 
+</html>
+<footer class="modal__footer">
+</footer>
+</section>
+</div>
+</div>
+</body>
