--- a/project/index_kid.html
+++ b/project/index_kid.html
@@ -16,7 +16,7 @@
     <ul>
       <li><img src="images/images.png"></li>
       <li id="KIMO">KIMO APP</li>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">Notifications</a></li>
       <ul>
         <li>Notification 1</li>
@@ -25,15 +25,15 @@
         <li>Notification 4</li>
         <li>Notification 5</li>
       </ul>
-      <li><a href="#">My Account</a></li>
-      <li><a href="#">Log Out</a></li>
+      <li><a href="index_profile.html">My Account</a></li>
+      <li><a href="index_login.html">Log Out</a></li>
     </ul>
     <nav>
       <ul>
         <li id="menu">
           <img src="images/menu-icon.png">
           <ul id="menu2">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Notifications</a></li>
             <ul>
               <li>Notification 1</li>
@@ -42,8 +42,8 @@
               <li>Notification 4</li>
               <li>Notification 5</li>
             </ul>
-            <li><a href="#">My Account</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="index_profile.html">My Account</a></li>
+            <li><a href="index_login.html">Log Out</a></li>
           </ul>
         </li>
         <li><img src="images/images.png"></li>
