--- a/project/SignUp.html
+++ b/project/SignUp.html
@@ -42,6 +42,10 @@
                         <input type="text" placeholder="E-mail">
                     </div>
             </div>
+            <div id="gen">
+                <input type="radio" name="gender" value="Male"> Male
+                <input type="radio" name="gender" value="Female"> Female
+            </div>
             <input type="button" id="butonSignUp" value="Sign up">
         </form>
     </main> 
