--- a/project/index_login.html
+++ b/project/index_login.html
@@ -29,7 +29,7 @@
                 <input type="button" id="butonLogin" value="Login">
             </form>
             <p id="SignUp">
-                    Do you have an account?
+                    Don't have an account?
                     <a href="SignUp.html" target="_blank">Sign Up!</a>
              </p>
         </div>
