--- a/project/SignUp.html
+++ b/project/SignUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="images/images.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,8 +31,8 @@
             <div class="SignUpBox">
                 <img src="images/73527377-location-icon-simple-flat-logo-of-location-sign-on-white-background-vector-illustration-.jpg.png" alt="user">
                 <div>
-                    <input type="text" placeholder="Latitudine">
-                    <input type="text" placeholder="Longitudine">
+                    <input type="text" placeholder="Latitude of your address">
+                    <input type="text" placeholder="Longitude of your address">
                 </div>
             </div>
             <div class="SignUpBox">
