--- a/project/index_login.html
+++ b/project/index_login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="images/images.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
