--- a/project/senzor.html
+++ b/project/senzor.html
@@ -14,12 +14,12 @@
         <form>
             <p> Kid Sensor</p><br>
             <div id="kid_id">
-                <img src="images/index.png">
+                <img src="images/index.png" alt="user">
                 <input type="text" value="Kid ID">
             </div>
             <div id="location">
-                <img
-                    src="images/73527377-location-icon-simple-flat-logo-of-location-sign-on-white-background-vector-illustration-.jpg.png">
+                <img src="images/73527377-location-icon-simple-flat-logo-of-location-sign-on-white-background-vector-illustration-.jpg.png"
+                    alt="location">
                 <input type="text" value="latitude">
                 <input type="text" value="longitude">
             </div>
