--- a/project/index.html
+++ b/project/index.html
@@ -13,82 +13,83 @@
 
     <nav>
         <ul>
-            <li><img src="images/images.png"></li>
-            <li id="KIMO">KIMO APP</li>
+            <li><img src="images/images.png" alt="logo"></li>
+            <li class="KIMO">KIMO APP</li>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Notifications</a></li>
-            <ul>
-                <li>Notification 1</li>
-                <li>Notification 2</li>
-                <li>Notification 3</li>
-                <li>Notification 4</li>
-                <li>Notification 5</li>
-            </ul>
+            <li><a href="#">Notifications</a>
+                <ul>
+                    <li>Notification 1</li>
+                    <li>Notification 2</li>
+                    <li>Notification 3</li>
+                    <li>Notification 4</li>
+                    <li>Notification 5</li>
+                </ul>
+            </li>
             <li><a href="index_profile.html">My Account</a></li>
             <li><a href="index_login.html">Log Out</a></li>
         </ul>
         <nav>
             <ul>
                 <li id="menu">
-                    <img src="images/menu-icon.png">
+                    <img src="images/menu-icon.png" alt="menu">
                     <ul id="menu2">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Notifications</a></li>
-                        <ul>
-                            <li>Notification 1</li>
-                            <li>Notification 2</li>
-                            <li>Notification 3</li>
-                            <li>Notification 4</li>
-                            <li>Notification 5</li>
-                        </ul>
+                        <li><a href="#">Notifications</a>
+                            <ul>
+                                <li>Notification 1</li>
+                                <li>Notification 2</li>
+                                <li>Notification 3</li>
+                                <li>Notification 4</li>
+                                <li>Notification 5</li>
+                            </ul>
+                        </li>
                         <li><a href="index_profile.html">My Account</a></li>
                         <li><a href="index_login.html">Log Out</a></li>
                     </ul>
                 </li>
-                <li><img src="images/images.png"></li>
-                <li id="KIMO">KIMO APP</li>
+                <li><img src="images/images.png" alt="logo"></li>
+                <li class="KIMO">KIMO APP</li>
             </ul>
 
         </nav>
     </nav>
     <main>
         <a href="index_kid.html">
-            <div><img src="images/picture145716079994.jpg"> kid name1 </div>
+            <div><img src="images/picture145716079994.jpg" alt="kid"> kid name1 </div>
         </a>
         <a href="index_kid.html">
-            <div><img src="images/picture145716079994.jpg"> kid name2</div>
+            <div><img src="images/picture145716079994.jpg" alt="kid"> kid name2</div>
         </a>
         <a href="index_kid.html">
-            <div><img src="images/clipart2755860.png"> kid name3</div>
+            <div><img src="images/clipart2755860.png" alt="kid"> kid name3</div>
         </a>
         <a href="index_kid.html">
-            <div><img src="images/picture145716079994.jpg"> kid name4</div>
+            <div><img src="images/picture145716079994.jpg" alt="kid"> kid name4</div>
         </a>
         <a href="index_kid.html">
-            <div><img src="images/clipart2755860.png"> kid name5</div>
+            <div><img src="images/clipart2755860.png" alt="kid"> kid name5</div>
         </a>
         <a href="#modal2" class="modal-trigger">
-            <div id="add"><img src="images/add.png"></div>
+            <div id="add"><img src="images/add.png" alt="add"></div>
         </a>
     </main>
     <footer>
         <div id="facebook">
-            <img
-                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-                href="https://www.facebook.com/stefania.andries">stefania.andries</a>
-            <img
-                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-                href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
-            <img
-                src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-                href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
+            <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+                alt="facebook"><a href="https://www.facebook.com/stefania.andries">stefania.andries</a>
+            <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+                alt="facebook"><a href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+            <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+                alt="facebook"><a href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
         </div>
 
         <div id="email">
-            <img src="images/windows8mailapp.jpg"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
-            <img src="images/windows8mailapp.jpg">
+            <img src="images/windows8mailapp.jpg" alt="mail"><a
+                href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
+            <img src="images/windows8mailapp.jpg" alt="mail">
             <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
-            <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
+            <img src="images/windows8mailapp.jpg" alt="mail"> <a
+                href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
 
         </div>
     </footer>
@@ -117,12 +118,12 @@
                             <div class="item">
                                 Gender:
                                 <div id="gen">
-                                    <input type="radio" id="gender" value="Girl" name="kidgen">Girl
-                                    <input type="radio" id="gender" value="Boy" name="kidgen">Boy</div>
+                                    <input type="radio" class="gender" value="Girl" name="kidgen">Girl
+                                    <input type="radio" class="gender" value="Boy" name="kidgen">Boy</div>
                             </div>
                             <div id="addphoto">
                                 Add a photo with your child:
-                                <input type="file" name="photo" value="images/pen">
+                                <input type="file" name="photo">
                             </div>
                         </form>
                 </div>
