--- a/project/index_kid.html
+++ b/project/index_kid.html
@@ -14,40 +14,42 @@
 
   <nav>
     <ul>
-      <li><img src="images/images.png"></li>
-      <li id="KIMO">KIMO APP</li>
+      <li><img src="images/images.png" alt="logo"></li>
+      <li class="KIMO">KIMO APP</li>
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Notifications</a></li>
-      <ul>
-        <li>Notification 1</li>
-        <li>Notification 2</li>
-        <li>Notification 3</li>
-        <li>Notification 4</li>
-        <li>Notification 5</li>
-      </ul>
+      <li><a href="#">Notifications</a>
+        <ul>
+          <li>Notification 1</li>
+          <li>Notification 2</li>
+          <li>Notification 3</li>
+          <li>Notification 4</li>
+          <li>Notification 5</li>
+        </ul>
+      </li>
       <li><a href="index_profile.html">My Account</a></li>
       <li><a href="index_login.html">Log Out</a></li>
     </ul>
     <nav>
       <ul>
         <li id="menu">
-          <img src="images/menu-icon.png">
+          <img src="images/menu-icon.png" alt="menu">
           <ul id="menu2">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Notifications</a></li>
-            <ul>
-              <li>Notification 1</li>
-              <li>Notification 2</li>
-              <li>Notification 3</li>
-              <li>Notification 4</li>
-              <li>Notification 5</li>
-            </ul>
+            <li><a href="#">Notifications</a>
+              <ul>
+                <li>Notification 1</li>
+                <li>Notification 2</li>
+                <li>Notification 3</li>
+                <li>Notification 4</li>
+                <li>Notification 5</li>
+              </ul>
+            </li>
             <li><a href="index_profile.html">My Account</a></li>
             <li><a href="index_login.html">Log Out</a></li>
           </ul>
         </li>
-        <li><img src="images/images.png"></li>
-        <li id="KIMO">KIMO APP</li>
+        <li><img src="images/images.png" alt="logo"></li>
+        <li class="KIMO">KIMO APP</li>
       </ul>
 
     </nav>
@@ -76,35 +78,32 @@
           </ul>
         </div>
       </a>
-      <a href="">
-        <a href="#modal2" class="modal-trigger">
-          <div id="addph"><img id="Kidimage" src="images/add.png">Change the profile image </div>
-        </a>
+      <a href="#modal2" class="modal-trigger">
+        <div id="addph"><img id="Kidimage" src="images/add.png" alt="kid">Change the profile image </div>
       </a>
+
     </div>
     <div class="profile">
-      <div id="dataprofile"><img src="images/picture145716079994.jpg">
+      <div id="dataprofile"><img src="images/picture145716079994.jpg" alt="boy">
         <div id="name"> Kid 1</div>
       </div>
-      <div class="map"><img src="images/Capture.jpg"></div>
+      <div class="map"><img src="images/Capture.jpg " alt="map"></div>
+    </div>
   </main>
   <footer>
     <div id="facebook">
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/stefania.andries">stefania.andries</a>
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/stefania.andries">stefania.andries</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
     </div>
 
     <div id="email">
-      <img src="images/windows8mailapp.jpg"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
-      <img src="images/windows8mailapp.jpg"> <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
-      <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"> <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
 
     </div>
   </footer>
@@ -123,9 +122,9 @@
 
                 <div id="addphoto">
                   Add a photo with your child:
-                  <input type="file" name="photo" value="images/pen">
+                  <input type="file" name="photo">
                 </div>
-
+              </div>
             </form>
         </div>
         <footer class="modal__footer">
