--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -13,40 +13,42 @@
 
   <nav>
     <ul>
-      <li><img src="images/images.png"></li>
-      <li id="KIMO">KIMO APP</li>
+      <li><img src="images/images.png" alt="logo"></li>
+      <li class="KIMO">KIMO APP</li>
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Notifications</a></li>
-      <ul>
-        <li>Notification 1</li>
-        <li>Notification 2</li>
-        <li>Notification 3</li>
-        <li>Notification 4</li>
-        <li>Notification 5</li>
-      </ul>
+      <li><a href="#">Notifications</a>
+        <ul>
+          <li>Notification 1</li>
+          <li>Notification 2</li>
+          <li>Notification 3</li>
+          <li>Notification 4</li>
+          <li>Notification 5</li>
+        </ul>
+      </li>
       <li><a href="">My Account</a></li>
       <li><a href="index_login.html">Log Out</a></li>
     </ul>
     <nav>
       <ul>
         <li id="menu">
-          <img src="images/menu-icon.png">
+          <img src="images/menu-icon.png" alt="menu">
           <ul id="menu2">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Notifications</a></li>
-            <ul>
-              <li>Notification 1</li>
-              <li>Notification 2</li>
-              <li>Notification 3</li>
-              <li>Notification 4</li>
-              <li>Notification 5</li>
-            </ul>
+            <li><a href="#">Notifications</a>
+              <ul>
+                <li>Notification 1</li>
+                <li>Notification 2</li>
+                <li>Notification 3</li>
+                <li>Notification 4</li>
+                <li>Notification 5</li>
+              </ul>
+            </li>
             <li><a href="#">My Account</a></li>
             <li><a href="index_login.html">Log Out</a></li>
           </ul>
         </li>
-        <li><img src="images/images.png"></li>
-        <li id="KIMO">KIMO APP</li>
+        <li><img src="images/images.png" alt="logo"></li>
+        <li class="KIMO">KIMO APP</li>
       </ul>
 
     </nav>
@@ -54,55 +56,56 @@
   <main>
     <div class="kids">
       <a href="index_kid.html">
-        <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name1 </div>
+        <div><img class="Kidimage" src="images/picture145716079994.jpg" alt="kid"> kid name1 </div>
       </a>
       <a href="index_kid.html">
-        <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name2</div>
+        <div><img class="Kidimage" src="images/picture145716079994.jpg" alt="kid"> kid name2</div>
       </a>
       <a href="index_kid.html">
-        <div><img id="Kidimage" src="images/clipart2755860.png"> kid name3</div>
+        <div><img class="Kidimage" src="images/clipart2755860.png" alt="kid"> kid name3</div>
       </a>
       <a href="index_kid.html">
-        <div><img id="Kidimage" src="images/picture145716079994.jpg"> kid name4</div>
+        <div><img class="Kidimage" src="images/picture145716079994.jpg" alt="kid"> kid name4</div>
       </a>
       <a href="index_kid.html">
-        <div><img id="Kidimage" src="images/clipart2755860.png"> kid name5</div>
+        <div><img class="Kidimage" src="images/clipart2755860.png" alt="kid"> kid name5</div>
       </a>
-      <a href="">
-        <a href="#modal2" class="modal-trigger">
-          <div id="add"><img id="Kidimage" src="images/add.png">Add kid</div>
-        </a>
+      <a href="#modal2" class="modal-trigger">
+        <div id="add"><img id="Kidimage" src="images/add.png" alt="add">Add kid</div>
       </a>
     </div>
     <div class="actions">
-      <div id="datas"><img src="images/descărcare (1).png"> FirstName LastName</div>
-      <div id="datas"><img src="images/descărcare (2).png"> Adress</div>
-      <div id="datas"><img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg"> Phone Number
+      <div class="datas"><img src="images/descărcare(1).png" alt="user"> FirstName LastName</div>
+      <div class="datas"><img src="images/descărcare(2).png" alt="location"> Adress</div>
+      <div class="datas"><img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg" alt="phone">
+        Phone
+        Number
       </div>
-      <div id="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg">
+      <div class="datas"><img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"
+          alt="mail">
         E-mail Adress</div>
       <br>
 
-      <div id="datas"><a href="#modal" class="modal-trigger"><img src="images/pen.png"> Change personal data</a></div>
+      <div class="datas"><a href="#modal" class="modal-trigger"><img src="images/pen.png" alt="pen"> Change personal
+          data</a>
+      </div>
+    </div>
 
   </main>
   <footer>
     <div id="facebook">
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/stefania.andries">stefania.andries</a>
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
-      <img
-        src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"><a
-        href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/stefania.andries">stefania.andries</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/anamaria.turcu.90">anamaria.turcu.90</a>
+      <img src="images/kisspng-logo-facebook-black-and-white-computer-icons-5b40b14988b153.2255686315309663455599.png"
+        alt="facebook"><a href="https://www.facebook.com/vararu.cristian98">vararu.cristian98</a>
     </div>
 
     <div id="email">
-      <img src="images/windows8mailapp.jpg"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
-      <img src="images/windows8mailapp.jpg"> <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
-      <img src="images/windows8mailapp.jpg"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"><a href="mailto:stefania.andries@yahoo.com">stefania.andries</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"> <a href="mailto:turcu.anamaria98@gmail.com">turcu.anamaria98</a>
+      <img src="images/windows8mailapp.jpg" alt="mail"> <a href="mailto:vararu.cristian@yahoo.com">vararu.cristian98</a>
 
     </div>
   </footer>
@@ -116,19 +119,20 @@
         <div class="modal__body">
           <p class="modal__text">
             <form>
-              <img src="images/descărcare (1).png"><br>
+              <img src="images/descărcare(1).png" alt="user"><br>
               <input type="text" name="name" value="FirstName LastName">
               <br>
-              <img src="images/descărcare (2).png">
+              <img src="images/descărcare(2).png" alt="location">
               Latitude:
               <input type="text" name="latitude" value="45.943161">
               <br> Longitude:
               <input type="text" name="longitudine" value="24.966761">
               <br>
-              <img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg"><br>
+              <img src="images/simbolo-de-un-telefono-auricular-en-un-circulo_318-50200.jpg" alt="phone"><br>
               <input type="text" name="phone" value="Phone Number">
               <br>
-              <img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"><br>
+              <img src="images/nowy-e-mail-symbol-zarys-okrągłego-przycisku-w-kolorze-czarnym_318-68510.jpg"
+                alt="mail"><br>
               <input type="text" name="e-mail" value="E-mail Adress">
               <br>
 
@@ -164,23 +168,17 @@
               <div class="item">
                 Gender:
                 <div id="gen">
-                  <input type="radio" id="gender" value="Girl" name="kidgen">Girl
-                  <input type="radio" id="gender" value="Boy" name="kidgen">Boy</div>
+                  <input type="radio" class="gender" value="Girl" name="kidgen">Girl
+                  <input type="radio" class="gender" value="Boy" name="kidgen">Boy</div>
               </div>
               <div id="addphoto">
                 Add a photo with your child:
-                <input type="file" name="photo" value="images/pen"><br>
+                <input type="file" name="photo"><br>
               </div>
             </form>
 
         </div>
+      </section>
     </div>
-</body>
-
-</html>
-<footer class="modal__footer">
-</footer>
-</section>
-</div>
-</div>
+  </div>
 </body>
