--- a/project/index_profile.html
+++ b/project/index_profile.html
@@ -18,7 +18,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Notifications</a>
         <ul>
-          <li>Notification 1</li>
+          <li><a href="#modal3" class="modal-trigger">Notification 1</a></li>
           <li>Notification 2</li>
           <li>Notification 3</li>
           <li>Notification 4</li>
@@ -178,6 +178,26 @@
             </form>
 
         </div>
+      </section>
+    </div>
+  </div>
+
+  <div class="modal3" id="modal3">
+    <div class="modal__dialog">
+      <section class="modal__content">
+        <header class="modal__header">
+          <h2 class="modal__title">Emergency situation!!!</h2>
+          <a href="#" class="modal__close">X</a>
+        </header>
+        <div class="modal__body">
+          <p class="modal__text">
+            <form>
+              Your kid KidName is closed to a animal that might be dangerous!
+
+            </form>
+        </div>
+        <footer class="modal__footer">
+        </footer>
       </section>
     </div>
   </div>
