--- a/project/SignUp.html
+++ b/project/SignUp.html
@@ -31,8 +31,8 @@
             <div class="SignUpBox">
                 <img src="images/73527377-location-icon-simple-flat-logo-of-location-sign-on-white-background-vector-illustration-.jpg.png" alt="user">
                 <div>
-                    <input type="text" placeholder="Latitude of your address">
-                    <input type="text" placeholder="Longitude of your address">
+                    <input type="text" placeholder="Latitude">
+                    <input type="text" placeholder="Longitude">
                 </div>
             </div>
             <div class="SignUpBox">
