--- a/project/SignUp.html
+++ b/project/SignUp.html
@@ -46,7 +46,7 @@
                 <input type="radio" name="gender" value="Male"> Male
                 <input type="radio" name="gender" value="Female"> Female
             </div>
-            <input type="button" id="butonSignUp" value="Sign up">
+            <input type="submit" formaction="index.html" id="butonSignUp" value="Sign up">
         </form>
     </main> 
 </body>
