--- a/project/index_login.html
+++ b/project/index_login.html
@@ -26,7 +26,7 @@
                     <img src="images/parola.png" alt="password">
                     <input type="password" placeholder="Your password">
                 </div>
-                <input type="button" id="butonLogin" value="Login">
+                <input type="submit" formaction="index.html" id="butonLogin" value="Login">
             </form>
             <p id="SignUp">
                     Don't have an account?
