--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -170,6 +170,10 @@
             Controlerele fac legătură între vizualizare și funcționalitățile aplicației descrise mai sus sau acțiunile
             derulate automat la nivelul serverului prin interpretarea datelor primite de la senzor.
         </p>
+        <div style="text-align:center;"><img src="57164089_1110300195807455_5582999954818859008_n.png"
+                style="width: 100%;" alt="container-diagram">
+            <h6>Picture 4 Diagrama MVC</h6>
+        </div>
     </section>
     <section>
         <h4>7. Baza de date</h4>
