--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -227,6 +227,16 @@
             </p>
 
     </section>
+    <section>
+        <h4>9. Bibliografie</h4>
+        <p>
+            <a
+                href="https://profs.info.uaic.ro/~busaco/teach/courses/web/">https://profs.info.uaic.ro/~busaco/teach/courses/web/</a>
+            <br><a href="https://w3c.github.io/scholarly-html/">https://w3c.github.io/scholarly-html/</a>
+            <br><a href="https://www.embedgooglemap.net/">https://www.embedgooglemap.net/</a>
+            <br><a href="https://microservices.io/">https://microservices.io/</a>
+        </p>
+    </section>
 </body>
 
 </html>
