--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -15,6 +15,19 @@
 
     </div>
     <section>
+        <h4>Cuprins</h4>
+        <p> <a href="#C1"> 1. Introducere</a>
+            <br> <a href="#C2"> 2. Diagrama Use-Case</a>
+            <br> <a href="#C3"> 3. Funcționalitățile aplicație</a>
+            <br> <a href="#C4"> 4. Task-uri pe fiecare membru</a>
+            <br> <a href="#C5"> 5. Tehnologii folosite</a>
+            <br> <a href="#C6"> 6. Arhitectura aplicației</a>
+            <br> <a href="#C7"> 7. Baza de date</a>
+            <br> <a href="#C8"> 8. Surse de date externe</a>
+            <br> <a href="#C9"> 9. Bibliografie</a>
+        </p>
+    </section>
+    <section id="C1">
         <h4>1. Introducere</h4>
         <p>
             Aplicația Kimo are ca scop siguranța copiilor, oferind părinților suport pentru monitorizarea acestora. Sunt
@@ -22,7 +35,7 @@
             oferă suport pentru a comunica cu alți părinți utilizatori.
         </p>
     </section>
-    <section>
+    <section id="C2">
         <h4>2. Diagrama Use-Case</h4>
         <P>
             <b>Actori</b><br>
@@ -48,7 +61,7 @@
             <h6>Picture 1 Use-Case Diagram</h6>
         </div>
     </section>
-    <section>
+    <section id="C3">
         <h4>
             3. Funcționalitățile aplicație</h4>
         <p> <b>3.1 Înregistrare:</b>
@@ -133,7 +146,7 @@
         </p>
 
     </section>
-    <section>
+    <section id="C4">
         <h4>4. Task-uri pe fiecare membru</h4>
         <br>
         <div style="text-align:center;"><img src="57360360_2301768866529724_415645704883535872_n.png"
@@ -141,8 +154,8 @@
             <h6>Picture 2 Task assign</h6>
         </div>
     </section>
-    <section>
-        <h4>5.Tehnologii folosite</h4>
+    <section id="C5">
+        <h4>5. Tehnologii folosite</h4>
 
         <b>5.1 Server:</b>
         <ul>
@@ -160,7 +173,7 @@
 
         </ul>
     </section>
-    <section>
+    <section id="C6">
         <h4>6. Arhitectura aplicației</h4>
         <div style="text-align:center;"><img src="UntitledDiagram.png" style="width: 80%;" alt="container-diagram">
             <h6>Picture 3 Diagrama de containere</h6>
@@ -170,18 +183,17 @@
             Controlerele fac legătură între vizualizare și funcționalitățile aplicației descrise mai sus sau acțiunile
             derulate automat la nivelul serverului prin interpretarea datelor primite de la senzor.
         </p>
-        <div style="text-align:center;"><img src="1.png"
-                style="width: 100%;" alt="container-diagram">
+        <div style="text-align:center;"><img src="1.png" style="width: 100%;" alt="container-diagram">
             <h6>Picture 4 Diagrama MVC</h6>
         </div>
     </section>
-    <section>
+    <section id="C7">
         <h4>7. Baza de date</h4>
         <div style="text-align: center;"><img src="tw-bd-diagram.png" style="width: 80%;" alt="Bd-diagram">
             <h6>Picture 5 Diagrama baza de date</h6>
         </div>
     </section>
-    <section>
+    <section id="C8">
         <h4> 8. Surse de date externe</h4>
         <p> <b>Sensor Kid:</b>
             <p>Realizat ca și un microserviciu PHP cu ajutorul API REST. Microserviciul va prelua
@@ -227,7 +239,7 @@
             </p>
 
     </section>
-    <section>
+    <section id="C9">
         <h4>9. Bibliografie</h4>
         <p>
             <a
