--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Kimo</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
