--- a/Arhitecture/Arhitecture.html
+++ b/Arhitecture/Arhitecture.html
@@ -248,6 +248,8 @@
             <br><a href="https://w3c.github.io/scholarly-html/">https://w3c.github.io/scholarly-html/</a>
             <br><a href="https://www.embedgooglemap.net/">https://www.embedgooglemap.net/</a>
             <br><a href="https://microservices.io/">https://microservices.io/</a>
+            <br><a
+                href="https://github.com/w3c/scholarly-html/blob/gh-pages/css/scholarly.css">https://github.com/w3c/scholarly-html/blob/gh-pages/css/scholarly.css</a>
         </p>
     </section>
 </body>
